...

import type {NativeStackScreenProps} from '@react-navigation/native-stack';
import AsyncStorage from '@react-native-async-storage/async-storage';

const HeaderButton = ({onPress}: {onPress: () => void}) => {
  return (
    <TouchableOpacity onPress={onPress} testID="delete-note-button">
      <Icon name="logout" size={24} color="#fff" />
    </TouchableOpacity>
  );
};

type Props = NativeStackScreenProps<RootStackParamList, 'Home'>;
...
          )}
          stickySectionHeadersEnabled
        />
      )}
      <View style={styles.fabContainer}>
        <FloatingActionButton
          testID="new-note-button"
          onPress={() => {
            navigation.navigate('NewNote');
          }}
        />
      </View>
    </SafeAreaView>
...
