import React from 'react';
import {NavigationContainer} from '@react-navigation/native';
import {createNativeStackNavigator} from '@react-navigation/native-stack';
import Login from './src/screens/Login';
import Home from './src/screens/Home';
import NewNote from './src/screens/NewNote';

const Stack = createNativeStackNavigator<RootStackParamList>();

function App(): React.JSX.Element {
  return (
    <NavigationContainer>
      <Stack.Navigator initialRouteName="Login">
        <Stack.Screen name="Login" component={Login} />
        <Stack.Screen name="Home" component={Home} options={{title: 'Notas'}} />
        <Stack.Screen
          name="NewNote"
          component={NewNote}
          options={{title: 'Nova Nota'}}
        />
      </Stack.Navigator>
    </NavigationContainer>
  );
}

export default App;
